--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,11 @@
 #Grails Metadata file
-#Wed May 30 22:47:45 CEST 2012
+#Wed Jul 11 10:27:46 CEST 2012
 app.grails.version=2.0.3
 app.name=covoiturage
 app.servlet.version=2.5
 app.version=0.1
+app.version.build=4
+app.version.build.date=juil. 11, 2012
+app.version.build.env=development
+app.version.revision=N/A
+plugins.kickstart-with-bootstrap=0.6.1
